# CMake_Examples

./: .gitignore  README.md
ch01/module1/: CMakeLists.txt  readmy.md
ch01/prog1/: CMakeLists.txt  prog.cpp
ch01/script1/: Hello.txt  readmy.md  script_test.cmake
ch04/05-structure/: CMakeLists.txt
structured_project/Sources/: CMakeLists.txt
structured_project/Sources/Fregat/: CMakeLists.txt
structured_project/Sources/OBJViewer/: CMakeLists.txt
structured_project/Sources/Tests/: CMakeLists.txt  math_test.cpp
structured_project/Sources/cmake/: 3rd_party.cmake
